# AuE893_S17_GUO

devel/: .catkin  .rosinstall  setup.sh
devel/lib/gazebo_cleaner/: gazebo_cleaner_node
devel/lib/gazebo_follow/: gazebo_follow_node
devel/lib/new_self_navi/: new_gazebo_follow_node
devel/lib/pkgconfig/: gazebo_cleaner.pc  gazebo_follow.pc  mybot_control.pc  mybot_description.pc  mybot_gazebo.pc  mybot_navigation.pc  new_self_navi.pc  pid_chase.pc  self_navi.pc
devel/lib/self_navi/: gazebo_follow_node
devel/share/gazebo_cleaner/cmake/: gazebo_cleanerConfig.cmake
devel/share/gazebo_follow/cmake/: gazebo_followConfig.cmake
devel/share/mybot_control/cmake/: mybot_controlConfig.cmake
src/assignment1/: CMakeLists.txt  package.xml
src/assignment1/src/: robot_cleaner.cpp
src/assignment1/worlds/: gazebo_cleaner.world  gazebo_mapping.world
src/assignment2/turtlebot_mapping/: assignment2.pgm  assignment2.yaml  test1.pgm  test1.yaml
src/assignment2/worlds/: New Text Document.txt  gazebo_mapping.sdf  kickass.sdf~
src/assignment3/: CMakeLists.txt~  package.xml~
src/assignment3/scripts/: self_navi.py
src/assignment3/src/: robot_cleaner.cpp  robot_cleaner2.cpp
src/assignment3/worlds/: navigate_test.sdf  navigate_test2.sdf  navigate_test3.sdf
src/assignment4/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/assignment4/scripts/: new_self_navi.py  pid.py
src/assignment4/worlds/: puzzle.sdf
src/pid_chase/: CMakeLists.txt  package.xml
src/pid_chase/launch/: pid_chase.launch
src/pid_chase/scripts/: pid_chase.py
(+6 files in other folders)
